# BigReal

./: CMakeLists.txt  README.md
include/: BigReal.hpp
src/: BigReal.cpp
tests/: arithm.cpp  bool_oper.cpp  conv.cpp
